--- a/app/src/main/res/drawable/share.xml
+++ b/app/src/main/res/drawable/share.xml
@@ -1,16 +1,33 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="36dp"
-    android:height="36dp"
-    android:viewportWidth="36"
-    android:viewportHeight="36">
-  <path
-      android:pathData="M18,0L18,0A18,18 0,0 1,36 18L36,18A18,18 0,0 1,18 36L18,36A18,18 0,0 1,0 18L0,18A18,18 0,0 1,18 0z"
-      android:fillColor="#313131"/>
-  <path
-      android:pathData="M13.59,19.51L20.42,23.49M20.41,12.51L13.59,16.49M26,11C26,12.657 24.657,14 23,14C21.343,14 20,12.657 20,11C20,9.343 21.343,8 23,8C24.657,8 26,9.343 26,11ZM14,18C14,19.657 12.657,21 11,21C9.343,21 8,19.657 8,18C8,16.343 9.343,15 11,15C12.657,15 14,16.343 14,18ZM26,25C26,26.657 24.657,28 23,28C21.343,28 20,26.657 20,25C20,23.343 21.343,22 23,22C24.657,22 26,23.343 26,25Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.4"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
-      android:strokeLineCap="round"/>
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0">
+    <group android:scaleX="0.85" android:scaleY="0.85" android:pivotX="12" android:pivotY="12">
+        <path
+            android:pathData="M18,6m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"
+            android:fillColor="#00000000"
+            android:strokeColor="#FFFFFF"
+            android:strokeWidth="1.5"/>
+        <path
+            android:pathData="M18,18m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"
+            android:fillColor="#00000000"
+            android:strokeColor="#FFFFFF"
+            android:strokeWidth="1.5"/>
+        <path
+            android:pathData="M6,12m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"
+            android:fillColor="#00000000"
+            android:strokeColor="#FFFFFF"
+            android:strokeWidth="1.5"/>
+        <path
+            android:pathData="M8.68,10.66 L15.32,7.34"
+            android:strokeColor="#FFFFFF"
+            android:strokeWidth="1.5"
+            android:strokeLineCap="round"/>
+        <path
+            android:pathData="M8.68,13.34 L15.32,16.66"
+            android:strokeColor="#FFFFFF"
+            android:strokeWidth="1.5"
+            android:strokeLineCap="round"/>
+    </group>
 </vector>
