--- a/app/src/main/res/drawable/trash.xml
+++ b/app/src/main/res/drawable/trash.xml
@@ -1,16 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="36dp"
-    android:height="36dp"
-    android:viewportWidth="36"
-    android:viewportHeight="36">
-  <path
-      android:pathData="M18,0L18,0A18,18 0,0 1,36 18L36,18A18,18 0,0 1,18 36L18,36A18,18 0,0 1,0 18L0,18A18,18 0,0 1,18 0z"
-      android:fillColor="#313131"/>
-  <path
-      android:pathData="M10,12.6H11.778M11.778,12.6H26M11.778,12.6L11.778,25.2C11.778,25.677 11.965,26.135 12.299,26.473C12.632,26.81 13.084,27 13.556,27H22.444C22.916,27 23.368,26.81 23.701,26.473C24.035,26.135 24.222,25.677 24.222,25.2V12.6M14.444,12.6V10.8C14.444,10.323 14.632,9.865 14.965,9.527C15.299,9.19 15.751,9 16.222,9H19.778C20.249,9 20.701,9.19 21.035,9.527C21.368,9.865 21.556,10.323 21.556,10.8V12.6M16.222,17.1V22.5M19.778,17.1V22.5"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.4"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
-      android:strokeLineCap="round"/>
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0">
+    <path
+        android:pathData="M3,6H5H21M19,6V20C19,20.53 18.789,21.039 18.414,21.414C18.039,21.789 17.53,22 17,22H7C6.47,22 5.961,21.789 5.586,21.414C5.211,21.039 5,20.53 5,20V6M8,6V4C8,3.47 8.211,2.961 8.586,2.586C8.961,2.211 9.47,2 10,2H14C14.53,2 15.039,2.211 15.414,2.586C15.789,2.961 16,3.47 16,4V6M10,11V17M14,11V17"
+        android:strokeLineJoin="round"
+        android:strokeWidth="1.5"
+        android:fillColor="#00000000"
+        android:strokeColor="#313131"
+        android:strokeLineCap="round"/>
 </vector>
